Made pickup locations configurable.

--- a/config/vufind/OLE.ini
+++ b/config/vufind/OLE.ini
@@ -25,6 +25,9 @@ operatorId = API
 ; OLE available code
 item_available_code = "AVAILABLE"
 
+; Pickup Location codes and display names 
+pickup_locations = "CODE1:Library One|CODE2:Library Two|CODE3:Library Three"
+
 [Renewals]
 ; If this is set to true, we will only display "renewal" checkboxes if items are able
 ; to be renewed.  This may cause the "checked out items" screen to take a long time
